; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_get_all_by_name.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_get_all_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32, i32 }

@NIL = common dso_local global i32* null, align 8
@HYPERTABLE = common dso_local global i32 0, align 4
@INVALID_INDEXID = common dso_local global i32 0, align 4
@hypertable_tuple_match_name = common dso_local global i32 0, align 4
@AccessShareLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_hypertable_get_all_by_name(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = call i32* (...) @ts_catalog_get()
  store i32* %9, i32** %7, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %11 = load i32*, i32** @NIL, align 8
  store i32* %11, i32** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %13 = load i32, i32* %5, align 4
  store i32 %13, i32* %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %14, align 4
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* @HYPERTABLE, align 4
  %18 = load i32, i32* @INVALID_INDEXID, align 4
  %19 = call i32 @catalog_get_index(i32* %16, i32 %17, i32 %18)
  %20 = load i32, i32* @hypertable_tuple_match_name, align 4
  %21 = load i32, i32* @AccessShareLock, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @hypertable_scan_limit_internal(i32* null, i32 0, i32 %19, i32 %20, %struct.TYPE_3__* %8, i32 -1, i32 %21, i32 0, i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  ret i32* %25
}

declare dso_local i32* @ts_catalog_get(...) #1

declare dso_local i32 @hypertable_scan_limit_internal(i32*, i32, i32, i32, %struct.TYPE_3__*, i32, i32, i32, i32) #1

declare dso_local i32 @catalog_get_index(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
